--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,14 @@
 /* You can add global styles to this file, and also import other style files */
+@font-face {
+  font-family: "PressStart2P-Regular";
+  src: url("./assets/PressStart2P-Regular.ttf");
+}
+html {
+  background-color: #444444;
+  color: rgb(8, 238, 0);
+  font-family: "PressStart2P-Regular", sans-serif;
+  padding-bottom: 150px;
+  @media (width > 450px) {
+    padding-bottom: 0px;
+  }
+}
