fixed age and make it automatic

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -8,7 +8,9 @@
   />
   <div>
     <p>HELLO! I'm Daniele!</p>
-    <p>I have 39 years old and I'm a Full Stack Developer.</p>
+    <p>
+      I'm {{ currentYear - 1986 }} years old and I'm a Full Stack Developer.
+    </p>
     <p>
       I starting programming when was young with my Commodore64! I grow up with
       the love for informatics and videogames! But when i must choose a school
