--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,13 @@
-<app-header />
-<app-profile />
-<app-work />
-<app-projects />
-<app-contacs />
-<app-footer />
+<header>
+  <app-header />
+</header>
+<main>
+  <app-profile />
+  <app-study />
+  <app-work />
+  <app-projects />
+  <app-contacs />
+</main>
+<footer>
+  <app-footer />
+</footer>
