added first project

--- a/src/app/projects/projects.component.html
+++ b/src/app/projects/projects.component.html
@@ -1,3 +1,12 @@
 <section id="section4">
-  <p>projects works!</p>
+  <div>
+    <h2>MOTOMARKET</h2>
+    <div class="motomarket">
+      <img src="../../assets/motomarket.webp" alt="project1.name" />
+      <p>motomarket description</p>
+      <a href="https://motomarketes.netlify.app/home" target="_blank"
+        >View Project</a
+      >
+    </div>
+  </div>
 </section>
