added first project

--- a/src/app/projects/projects.component.html
+++ b/src/app/projects/projects.component.html
@@ -2,7 +2,12 @@
   <div>
     <h2>MOTOMARKET</h2>
     <div class="motomarket">
-      <img src="../../assets/motomarket.webp" alt="project1.name" />
+      <img
+        src="../../assets/motomarket.webp"
+        alt="project1.name"
+        height="100"
+        width="180"
+      />
       <p>motomarket description</p>
       <a href="https://motomarketes.netlify.app/home" target="_blank"
         >View Project</a
