--- a/src/app/projects/projects.component.html
+++ b/src/app/projects/projects.component.html
@@ -1,12 +1,23 @@
 <section id="section4">
   <h2>Projects</h2>
-  <div *ngFor="let project of projects">
+  <div class="projects" *ngFor="let project of projects">
     <h3>{{ project.name }}</h3>
-    <div *ngFor="let tech of project.technologies">
-      <img [src]="icons[tech]" [alt]="tech" width="32" height="32" />
-      <!-- <span>{{ tech }}</span> -->
+    <div class="projectBody">
+      <img [src]="project.image" [alt]="project.name" height="100" />
+      <p>{{ project.description }}</p>
     </div>
-    <p>{{ project.description }}</p>
-    <a [href]="project.path" target="_blank">View Project</a>
+    <div class="tech">
+      <div *ngFor="let tech of project.technologies">
+        <img [src]="icons[tech]" [alt]="tech" width="32" height="32" />
+      </div>
+      <a [href]="project.front" target="_blank">GitHub Front</a>
+      @if (project.back?.length! < 3) {
+      <span></span>
+      }@else{
+      <a [href]="project.back" target="_blank">GitHub Back</a>
+      }
+
+      <a [href]="project.path" target="_blank">View Project</a>
+    </div>
   </div>
 </section>
