added section qualification and certefication

--- a/src/app/study/study.component.html
+++ b/src/app/study/study.component.html
@@ -1,5 +1,43 @@
 <section id="section2">
-  <p>study works!</p>
+  <h2>QUALIFICATIONS:</h2>
+  <div class="card">
+    <div class="framework">
+      <h2>Fullstack Web Developer</h2>
+      <span>ISDI CODERS</span>
+      <span>Madrid - 2024</span>
+      <p>
+        Lorem, ipsum dolor sit amet consectetur adipisicing elit. Assumenda
+        corporis magnam praesentium esse. Beatae veniam dolore, molestias
+        adipisci dicta fugit nemo inventore repellendus et quasi esse quisquam
+        dolores minima eos!
+      </p>
+    </div>
+    <div class="framework">
+      <h2>FP Quimica y Biologia</h2>
+      <span>IPSIA E. CAVAZZA</span>
+      <span>Pomezia (Italia) - 2006</span>
+      <p>
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Porro, omnis
+        laudantium, voluptates cumque harum debitis libero, suscipit praesentium
+        nulla quasi et sapiente perspiciatis quo dolores quae neque illo?
+        Voluptatibus, dolorum.
+      </p>
+    </div>
+  </div>
+  <h2>CERTIFICATION:</h2>
+  <div class="card">
+    <div class="framework">
+      <h2>JAVA EE</h2>
+      <span>Core Network sl</span>
+      <span>Madrid - 2024</span>
+      <p>
+        Lorem, ipsum dolor sit amet consectetur adipisicing elit. Assumenda
+        corporis magnam praesentium esse. Beatae veniam dolore, molestias
+        adipisci dicta fugit nemo inventore repellendus et quasi esse quisquam
+        dolores minima eos!
+      </p>
+    </div>
+  </div>
   <h2>KNOWLEDGE:</h2>
   <ul>
     <li>
