--- a/src/app/work/work.component.html
+++ b/src/app/work/work.component.html
@@ -5,10 +5,11 @@
     <button (click)="downloadEnglish()">ENG</button>
     <button (click)="downloadSpanish()">ESP</button>
   </div>
-  <div class="work">
+  <div class="card">
     <div class="framework">
       <h3>RAAM Delivery SL, Madrid</h3>
-      <p>Administrativo 2020 - 2023</p>
+      <span>Administrativo</span>
+      <span>2020 - 2023</span>
       <p>
         Uso de sistemas informáticos y tecnologicós (excel, word). Coordinación
         de los horarios de trabajo y tareas del equipo de 42 personas.
@@ -18,7 +19,8 @@
     </div>
     <div class="framework">
       <h3>NAF SERVIZI SRL, Roma</h3>
-      <p>Informatico / Administrativo consultora 2012-2018</p>
+      <span>Informatico / Administrativo consultora</span>
+      <span>2012 - 2018</span>
       <p>
         Encargado de la creación de páginas y sitios web funcionales e
         intuitivos para los clientes usando Wordpress. Mantenimiento y
