--- a/src/styles.css
+++ b/src/styles.css
@@ -12,3 +12,15 @@ html {
     padding-bottom: 0px;
   }
 }
+.framework {
+  display: flex;
+  flex-direction: column;
+  border: 1px solid #ccc;
+  border-radius: 25px;
+  padding: 1rem;
+}
+.card {
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+}
