completed section study

--- a/src/app/study/study.component.html
+++ b/src/app/study/study.component.html
@@ -6,10 +6,16 @@
       <span>ISDI CODERS</span>
       <span>Madrid - 2024</span>
       <p>
-        Lorem, ipsum dolor sit amet consectetur adipisicing elit. Assumenda
-        corporis magnam praesentium esse. Beatae veniam dolore, molestias
-        adipisci dicta fugit nemo inventore repellendus et quasi esse quisquam
-        dolores minima eos!
+        During the intensive Fullstack Web Development course at ISDI Coders, I
+        acquired advanced skills in web development, specializing in both
+        front-end and back-end technologies. I worked on real-world projects
+        using modern technology stacks such as HTML, CSS, JavaScript,
+        TypeScript, Angular, Node.js, Express, NestJS, and PostgreSQL. This
+        experience allowed me to develop a practical approach to programming,
+        from user interface design to database management, with a focus on best
+        practices and Agile methodologies. As the final part of the course, I
+        presented a personal project, MotoMarket, which I had already started
+        developing on my own.
       </p>
     </div>
     <div class="framework">
@@ -17,10 +23,14 @@
       <span>IPSIA E. CAVAZZA</span>
       <span>Pomezia (Italia) - 2006</span>
       <p>
-        Lorem ipsum dolor sit amet consectetur adipisicing elit. Porro, omnis
-        laudantium, voluptates cumque harum debitis libero, suscipit praesentium
-        nulla quasi et sapiente perspiciatis quo dolores quae neque illo?
-        Voluptatibus, dolorum.
+        I completed the Vocational Training program in Chemistry and Biology at
+        IPSIA E. Cavazza, where I acquired a strong foundation in chemical and
+        biological sciences. During the course, I studied subjects such as
+        organic and inorganic chemistry, microbiology, and laboratory
+        techniques. I developed practical skills through laboratory experiments
+        and research projects, which allowed me to gain a better understanding
+        of the practical applications of science in industrial and environmental
+        contexts.
       </p>
     </div>
   </div>
@@ -31,10 +41,15 @@
       <span>Core Network sl</span>
       <span>Madrid - 2024</span>
       <p>
-        Lorem, ipsum dolor sit amet consectetur adipisicing elit. Assumenda
-        corporis magnam praesentium esse. Beatae veniam dolore, molestias
-        adipisci dicta fugit nemo inventore repellendus et quasi esse quisquam
-        dolores minima eos!
+        I completed an intensive course on Java EE (Enterprise Edition) at Core
+        Network SL in Madrid. During the course, I gained advanced skills in
+        developing enterprise applications using the Java EE framework. I
+        studied and applied technologies such as Servlets, JSP (JavaServer
+        Pages), EJB (Enterprise JavaBeans), and JPA (Java Persistence API), as
+        well as software design and architecture techniques for scalable and
+        maintainable applications. I worked on real-world projects that allowed
+        me to integrate various components and services, enhancing my ability to
+        manage and develop complex software solutions.
       </p>
     </div>
   </div>
