added css and ping service(wake up) for send email

--- a/src/app/contacs/contacs.component.html
+++ b/src/app/contacs/contacs.component.html
@@ -1,5 +1,5 @@
 <section id="section5">
-  <form (ngSubmit)="sendEmail()">
+  <form  class="form" (ngSubmit)="sendEmail()">
     <label for="from">From:</label>
     <input id="from" [(ngModel)]="from" name="from" required />
 
