--- a/src/app/header/header.component.css
+++ b/src/app/header/header.component.css
@@ -1,5 +1,11 @@
 :host {
   nav {
+    background-color: #070707;
+    position: fixed;
+    top: 0;
+    right: 0;
+    width: 100%;
+
     .desktop-menu {
       display: none;
     }
@@ -8,16 +14,21 @@
       height: 24px;
       cursor: pointer;
     }
+    .navbar {
+      display: flex;
+      justify-content: end;
+      margin-right: 16px;
+    }
     .burger-menu .burger-container {
       position: relative;
     }
     .burger-menu .burger-container .burger-inner {
       position: absolute;
-      z-index: 100;
+      z-index: 2;
       width: 22px;
       left: 0px;
       top: 11px;
-      border: 1px solid #ff0000;
+      border: 1px solid rgb(8, 238, 0);
       transition: border-color 0.2s ease-in 0.2s;
     }
     .burger-menu .burger-container .burger-inner::before {
@@ -26,7 +37,7 @@
       top: -6px;
       left: -1px;
       width: 22px;
-      border: 1px solid #ff0000;
+      border: 1px solid rgb(8, 238, 0);
       transition: top 0.2s ease-in 0.3s, transform ease-in 0.2s;
     }
     .burger-menu .burger-container .burger-inner::after {
@@ -35,7 +46,7 @@
       top: 4px;
       left: -1px;
       width: 22px;
-      border: 1px solid #ff0000;
+      border: 1px solid rgb(8, 238, 0);
       transition: top 0.2s ease-in 0.3s, transform ease-in 0.2s;
     }
     .burger-menu.active .burger-container .burger-inner {
@@ -57,7 +68,7 @@
       padding: 0;
       margin: 0;
       display: none;
-      z-index: 100;
+      z-index: 2;
     }
     .menu.visible {
       display: flex;
@@ -65,34 +76,49 @@
       justify-content: space-evenly;
       align-items: center;
       gap: 1rem;
-      width: 100px;
+      width: 250px;
       height: 250px;
       position: fixed;
-      z-index: 100;
-      top: 80px;
+      z-index: 2;
+      top: 24px;
       right: 0;
-      background-color: #3d3d3d3d;
+      background-color: #07070791;
     }
   }
+  .overlay {
+    display: none;
+  }
+  .overlay.visible {
+    display: block;
+    position: fixed;
+    z-index: 0;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.4);
+  }
+
   @media (width > 450px) {
-    header {
-      position: absolute;
-      nav {
-        display: flex;
-        justify-content: space-between;
-        gap: 16px;
-        font-size: 10px;
-        line-height: 15px;
-        background-color: transparent;
-        position: fixed;
-        background-color: #444444a8;
-        border-radius: 20px;
+    nav {
+      .container.navbar {
+        display: none;
       }
+      .navbar {
+        display: none;
+      }
+    }
+
+    header {
       span {
         cursor: pointer;
       }
       .desktop-menu {
         display: flex;
+        align-items: center;
+        margin-left: 16px;
+        height: 32px;
+        gap: 80px;
       }
     }
   }
