--- a/src/app/study/study.component.html
+++ b/src/app/study/study.component.html
@@ -1,59 +1,35 @@
 <section id="section2">
-  <h2>QUALIFICATIONS:</h2>
+  <h2>{{ "qualifications.sectionTitle" | translate }}</h2>
   <div class="card">
     <div class="framework">
-      <h2>Fullstack Web Developer</h2>
-      <span>ISDI CODERS</span>
-      <span>Madrid - 2024</span>
+      <h2>{{ "qualifications.fullstackTitle" | translate }}</h2>
+      <span>{{ "qualifications.fullstackInstitution" | translate }}</span>
+      <span>{{ "qualifications.fullstackLocationDate" | translate }}</span>
       <p>
-        During the intensive Fullstack Web Development course at ISDI Coders, I
-        acquired advanced skills in web development, specializing in both
-        front-end and back-end technologies. I worked on real-world projects
-        using modern technology stacks such as HTML, CSS, JavaScript,
-        TypeScript, Angular, Node.js, Express, NestJS, and PostgreSQL. This
-        experience allowed me to develop a practical approach to programming,
-        from user interface design to database management, with a focus on best
-        practices and Agile methodologies. As the final part of the course, I
-        presented a personal project, MotoMarket, which I had already started
-        developing on my own.
+        {{ "qualifications.fullstackDescription" | translate }}
       </p>
     </div>
     <div class="framework">
-      <h2>FP Quimica y Biologia</h2>
-      <span>IPSIA E. CAVAZZA</span>
-      <span>Pomezia (Italia) - 2006</span>
+      <h2>{{ "qualifications.chemistryTitle" | translate }}</h2>
+      <span>{{ "qualifications.chemistryInstitution" | translate }}</span>
+      <span>{{ "qualifications.chemistryLocationDate" | translate }}</span>
       <p>
-        I completed the Vocational Training program in Chemistry and Biology at
-        IPSIA E. Cavazza, where I acquired a strong foundation in chemical and
-        biological sciences. During the course, I studied subjects such as
-        organic and inorganic chemistry, microbiology, and laboratory
-        techniques. I developed practical skills through laboratory experiments
-        and research projects, which allowed me to gain a better understanding
-        of the practical applications of science in industrial and environmental
-        contexts.
+        {{ "qualifications.chemistryDescription" | translate }}
       </p>
     </div>
   </div>
-  <h2>CERTIFICATION:</h2>
+  <h2>{{ "certification.sectionTitle" | translate }}</h2>
   <div class="card">
     <div class="framework">
-      <h2>JAVA EE</h2>
-      <span>Core Network sl</span>
-      <span>Madrid - 2024</span>
+      <h2>{{ "certification.javaTitle" | translate }}</h2>
+      <span>{{ "certification.javaInstitution" | translate }}</span>
+      <span>{{ "certification.javaLocationDate" | translate }}</span>
       <p>
-        I completed an intensive course on Java EE (Enterprise Edition) at Core
-        Network SL in Madrid. During the course, I gained advanced skills in
-        developing enterprise applications using the Java EE framework. I
-        studied and applied technologies such as Servlets, JSP (JavaServer
-        Pages), EJB (Enterprise JavaBeans), and JPA (Java Persistence API), as
-        well as software design and architecture techniques for scalable and
-        maintainable applications. I worked on real-world projects that allowed
-        me to integrate various components and services, enhancing my ability to
-        manage and develop complex software solutions.
+        {{ "certification.javaDescription" | translate }}
       </p>
     </div>
   </div>
-  <h2>KNOWLEDGE:</h2>
+  <h2>{{ "knowledge.sectionTitle" | translate }}</h2>
   <ul>
     <li>
       <img
