--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -20,6 +20,17 @@
         <li><span (click)="scrollTo('section3')">WORK EXPERIENCE</span></li>
         <li><span (click)="scrollTo('section4')">MY PROJECT</span></li>
         <li><span (click)="scrollTo('section5')">CONTACTS</span></li>
+        <div>
+          <button (click)="switchLanguage('en')">
+            <img src="assets/en.png" alt="English" width="32" height="32" />
+          </button>
+          <button (click)="switchLanguage('es')">
+            <img src="assets/es.png" alt="Spanish" width="32" height="32" />
+          </button>
+          <button (click)="switchLanguage('it')">
+            <img src="assets/it.png" alt="Italian" width="32" height="32" />
+          </button>
+        </div>
       </ul>
     </div>
     <!-- DESKTOP MENU -->
@@ -28,6 +39,15 @@
       <span (click)="scrollTo('section3')">WORK</span>
       <span (click)="scrollTo('section4')">PROJECTS</span>
       <span (click)="scrollTo('section5')">CONTACTS</span>
+      <button (click)="switchLanguage('en')">
+        <img src="assets/en.png" alt="English" width="32" height="32" />
+      </button>
+      <button (click)="switchLanguage('es')">
+        <img src="assets/es.png" alt="Spanish" width="32" height="32" />
+      </button>
+      <button (click)="switchLanguage('it')">
+        <img src="assets/it.png" alt="Italian" width="32" height="32" />
+      </button>
     </div>
   </nav>
 </header>
