--- a/src/app/work/work.component.html
+++ b/src/app/work/work.component.html
@@ -1,32 +1,25 @@
 <section id="section3">
-  <h2>WORKING EXPERIENCE</h2>
+  <h2>{{ "workExperience.sectionTitle" | translate }}</h2>
   <div class="curriculum">
-    <span>My Curriculum: 💾</span>
+    <span>{{ "workExperience.curriculum" | translate }}</span>
     <button (click)="downloadEnglish()">ENG</button>
     <button (click)="downloadSpanish()">ESP</button>
   </div>
   <div class="card">
     <div class="framework">
-      <h3>RAAM Delivery SL, Madrid</h3>
-      <span>Administrativo</span>
-      <span>2020 - 2023</span>
+      <h3>{{ "workExperience.raam.company" | translate }}</h3>
+      <span>{{ "workExperience.raam.position" | translate }}</span>
+      <span>{{ "workExperience.raam.dates" | translate }}</span>
       <p>
-        Uso de sistemas informáticos y tecnologicós (excel, word). Coordinación
-        de los horarios de trabajo y tareas del equipo de 42 personas.
-        Elaboración de informes y reportes periódicos sobre el andamento de
-        trabajo.
+        {{ "workExperience.raam.description" | translate }}
       </p>
     </div>
     <div class="framework">
-      <h3>NAF SERVIZI SRL, Roma</h3>
-      <span>Informatico / Administrativo consultora</span>
-      <span>2012 - 2018</span>
+      <h3>{{ "workExperience.naf.company" | translate }}</h3>
+      <span>{{ "workExperience.naf.position" | translate }}</span>
+      <span>{{ "workExperience.naf.dates" | translate }}</span>
       <p>
-        Encargado de la creación de páginas y sitios web funcionales e
-        intuitivos para los clientes usando Wordpress. Mantenimiento y
-        actualizacion de las aplication web existentes para garantizar las
-        seguridad y el rendimiento. Uso de sistema informaticos y tecnologico
-        (excel, word). Servicio de gestoría por terceros.
+        {{ "workExperience.naf.description" | translate }}
       </p>
     </div>
   </div>
