--- a/src/app/header/header.component.css
+++ b/src/app/header/header.component.css
@@ -17,6 +17,7 @@
     .navbar {
       display: flex;
       justify-content: end;
+      gap: 16px;
       margin-right: 16px;
     }
     .burger-menu .burger-container {
@@ -102,6 +103,13 @@
     background: none;
     border: none;
     cursor: pointer;
+  }
+  .music button img {
+    filter: none;
+  }
+
+  .music button:disabled img {
+    filter: grayscale(100%) opacity(50%);
   }
 
   @media (width > 450px) {
