--- a/src/app/study/study.component.html
+++ b/src/app/study/study.component.html
@@ -28,6 +28,14 @@
         {{ "certification.javaDescription" | translate }}
       </p>
     </div>
+    <div class="framework">
+      <h2>{{ "certification.oracleCertification.name" | translate }}</h2>
+      <span>{{ "certification.oracleCertification.issuer" | translate }}</span>
+      <span>{{ "certification.oracleCertification.date" | translate }}</span>
+      <p>
+        {{ "certification.oracleCertification.description" | translate }}
+      </p>
+    </div>
   </div>
   <h2>{{ "knowledge.sectionTitle" | translate }}</h2>
   <ul>
