--- a/src/app/work/work.component.html
+++ b/src/app/work/work.component.html
@@ -5,13 +5,30 @@
     <button (click)="downloadEnglish()">ENG</button>
     <button (click)="downloadSpanish()">ESP</button>
   </div>
+
   <div class="card">
     <div class="framework">
-      <h3>{{ "workExperience.raam.company" | translate }}</h3>
-      <span>{{ "workExperience.raam.position" | translate }}</span>
-      <span>{{ "workExperience.raam.dates" | translate }}</span>
+      <h3>{{ "workExperience.lamaCanyon.company" | translate }}</h3>
+      <span>{{ "workExperience.lamaCanyon.position" | translate }}</span>
+      <span>{{ "workExperience.lamaCanyon.dates" | translate }}</span>
       <p>
-        {{ "workExperience.raam.description" | translate }}
+        {{ "workExperience.lamaCanyon.description" | translate }}
+      </p>
+    </div>
+    <div class="framework">
+      <h3>{{ "workExperience.voltix.company" | translate }}</h3>
+      <span>{{ "workExperience.voltix.position" | translate }}</span>
+      <span>{{ "workExperience.voltix.dates" | translate }}</span>
+      <p>
+        {{ "workExperience.voltix.description" | translate }}
+      </p>
+    </div>
+    <div class="framework">
+      <h3>{{ "workExperience.motoMarket.company" | translate }}</h3>
+      <span>{{ "workExperience.motoMarket.position" | translate }}</span>
+      <span>{{ "workExperience.motoMarket.dates" | translate }}</span>
+      <p>
+        {{ "workExperience.motoMarket.description" | translate }}
       </p>
     </div>
     <div class="framework">
